GTNPORTAL-3039: fix issue where the text in the login form would be rendered too low in the input and would be clipped. Affected IE10 and the older Android 'browser'.

--- a/mobile-integration/skin/src/main/webapp/skin/ResponsiveSkin/portal/webui/component/UILoginForm/UILoginForm.css
+++ b/mobile-integration/skin/src/main/webapp/skin/ResponsiveSkin/portal/webui/component/UILoginForm/UILoginForm.css
@@ -35,7 +35,7 @@
     border: 1px solid #ccc;
     width: 100%;
     height: 1.4285714285714em;
-    line-height: 2.2058823529412em;
+    line-height: 1.4285714285714em;
     font-size: 0.875em;
     border-radius: 4px;
     color: #555555;
